# lintdiff

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  action.yml  lintdiff.toml.example
.github/workflows/: ci.yml  fuzz.yml  mutants.yml  release.yml
crates/lintdiff-app/: Cargo.toml
crates/lintdiff-app-git/: Cargo.toml
crates/lintdiff-app-git/src/: lib.rs
crates/lintdiff-app-io/: Cargo.toml
crates/lintdiff-app-io/src/: lib.rs
crates/lintdiff-app/src/: lib.rs
crates/lintdiff-bdd/: Cargo.toml
crates/lintdiff-bdd-grid/: Cargo.toml
crates/lintdiff-bdd-grid/src/: lib.rs
crates/lintdiff-bdd-harness/: Cargo.toml
crates/lintdiff-bdd-harness/src/: lib.rs
crates/lintdiff-bdd/src/: lib.rs
crates/lintdiff-cli/: Cargo.toml  build.rs
crates/lintdiff-cli/src/: main.rs
crates/lintdiff-cli/tests/: bdd.rs
crates/lintdiff-cli/tests/features/: lintdiff.feature
crates/lintdiff-cli/tests/fixtures/: fingerprint_whitespace_equivalent.jsonl  generated_file.diff  generated_file_diagnostics.jsonl  macro_expanded.jsonl  mixed_spans.jsonl  moved_code.diff  moved_code_diagnostics.jsonl  multi_file.diff  multi_span.jsonl  no_span_diagnostics.jsonl  rename.diff  rename_diagnostics.jsonl  simple_addition.diff  suppress_code.jsonl  warning_on_changed_line.jsonl  warning_outside_diff.jsonl
crates/lintdiff-core/: Cargo.toml
crates/lintdiff-core/src/: lib.rs
crates/lintdiff-diagnostics/: Cargo.toml
crates/lintdiff-diagnostics/src/: lib.rs
crates/lintdiff-diff/: Cargo.toml
crates/lintdiff-diff/src/: lib.rs
crates/lintdiff-domain/: Cargo.toml
crates/lintdiff-domain/src/: lib.rs
crates/lintdiff-feature-flags/: Cargo.toml
crates/lintdiff-feature-flags/src/: lib.rs
crates/lintdiff-fingerprint/: Cargo.toml
crates/lintdiff-fingerprint/src/: lib.rs
crates/lintdiff-ingest/: Cargo.toml
crates/lintdiff-ingest-core/: Cargo.toml
crates/lintdiff-ingest-core/src/: lib.rs
crates/lintdiff-ingest-core/tests/: determinism.rs  fingerprint_integration.rs
crates/lintdiff-ingest-core/tests/snapshots/: fail_verdict.json  pass_verdict.json  warn_verdict.json
crates/lintdiff-ingest/src/: lib.rs
crates/lintdiff-match/: Cargo.toml
crates/lintdiff-match/src/: filters.rs  lib.rs  paths.rs  spans.rs
crates/lintdiff-policy/: Cargo.toml
crates/lintdiff-policy/src/: code.rs  fingerprint.rs  lib.rs  verdict.rs
crates/lintdiff-render/: Cargo.toml
crates/lintdiff-render/src/: lib.rs
crates/lintdiff-types/: Cargo.toml
crates/lintdiff-types/src/: config.rs  lib.rs  ordering.rs  path.rs  report.rs
crates/lintdiff-types/tests/: schema_validation.rs
crates/lintdiff-types/tests/fixtures/: sample.report.json
docs/: architecture.md  design.md  implementation-plan.md  requirements.md  testing.md
docs/examples/: basic-workflow.yml  monorepo-workflow.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: diagnostics_parser.rs  diff_parser.rs  finding_fingerprint.rs
schemas/: lintdiff.report.v1.json  receipt.envelope.v1.json
