[workspace]
resolver = "2"
members = [
  "crates/lintdiff-types",
  "crates/lintdiff-diff",
  "crates/lintdiff-diagnostics",
  "crates/lintdiff-domain",
  "crates/lintdiff-render",
  "crates/lintdiff-app",
  "crates/lintdiff-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
authors = ["Effortless Metrics <opensource@effortlessmetrics.com>"]
repository = "https://github.com/effortless-metrics/lintdiff"
description = "Diff-scoped filter for rustc/Clippy diagnostics, emitting a cockpit-compatible receipt."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
globset = "0.4"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_must_use = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -3 }
# allow some noise in early iterations; tighten as the code stabilizes
too_many_lines = "allow"
module_name_repetitions = "allow"
