[package]
name = "lintdiff-app-io"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "IO + config helpers for lintdiff adapters."

[dependencies]
lintdiff-diagnostics = { path = "../lintdiff-diagnostics" }
lintdiff-types = { path = "../lintdiff-types" }
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
