[package]
name = "lintdiff-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Orchestration adapters for lintdiff."

[dependencies]
lintdiff-app-git = { path = "../lintdiff-app-git" }
lintdiff-app-io = { path = "../lintdiff-app-io" }
lintdiff-feature-flags = { path = "../lintdiff-feature-flags" }
lintdiff-types = { path = "../lintdiff-types" }
lintdiff-diff = { path = "../lintdiff-diff" }
lintdiff-domain = { path = "../lintdiff-domain" }
lintdiff-render = { path = "../lintdiff-render" }

thiserror.workspace = true
serde_json.workspace = true
