[package]
name = "lintdiff-bdd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "BDD helpers and scenario-grid utilities for lintdiff adapters and tests."

[dependencies]
lintdiff-bdd-harness = { path = "../lintdiff-bdd-harness" }
