[package]
name = "lintdiff-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared DTOs, config, and normalization utilities for lintdiff."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
jsonschema = "0.28"
